Add skeleton for MusicPlayerWindow

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,6 +3,8 @@
 bin_PROGRAMS = music-player
 
 music_player_SOURCES = \
+	music-player-window.c \
+	music-player-window.h \
 	main.c
 
 music_player_CFLAGS = \
