Link to id3tag >= 0.15

--- a/configure.ac
+++ b/configure.ac
@@ -12,6 +12,8 @@ PKG_CHECK_MODULES([GIO], [gio-2.0 >= 2.38.0])
 PKG_CHECK_MODULES([GTK3], [gtk+-3.0 >= 3.10.0])
 # We require GStreamer 1.0
 PKG_CHECK_MODULES([GSTREAMER], [gstreamer-1.0 >= 1.0.10])
+# Use id3tag to check audio tags.
+PKG_CHECK_MODULES([ID3], [id3tag >= 0.15])
 
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_FILES(Makefile src/Makefile)
