--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -14,8 +14,10 @@ music_player_SOURCES = \
 music_player_CFLAGS = \
 	$(GTK3_CFLAGS) \
 	$(GSTREAMER_CFLAGS) \
+	$(ID3_FLAGS) \
 	$(AM_CFLAGS)
 
 music_player_LDADD = \
 	$(GTK3_LIBS) \
-	$(GSTREAMER_LIBS)
+	$(GSTREAMER_LIBS) \
+	$(ID3_LIBS)
