Automatically discover all audio tracks on startup
This will have to be changed in the future to use async methods, and
start *after* the UI is presented. However, I want to develop this
quickly, and nobodys even using this. So it doesn't matter ^^

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,6 +9,8 @@ music_player_SOURCES = \
 	player-status-area.h \
 	player-view.c \
 	player-view.h \
+	util.c \
+	util.h \
 	main.c
 
 music_player_CFLAGS = \
