--- a/configure.ac
+++ b/configure.ac
@@ -13,7 +13,7 @@ PKG_CHECK_MODULES([GTK3], [gtk+-3.0 >= 3.10.0])
 # We require GStreamer 1.0
 PKG_CHECK_MODULES([GSTREAMER], [gstreamer-1.0 >= 1.0.10])
 # Use id3tag to check audio tags.
-PKG_CHECK_MODULES([ID3], [id3tag >= 0.15])
+AC_CHECK_HEADERS([id3.h], [])
 
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_FILES(Makefile src/Makefile)
