Bail configuration if id3 headers aren't found

--- a/configure.ac
+++ b/configure.ac
@@ -12,8 +12,11 @@ PKG_CHECK_MODULES([GIO], [gio-2.0 >= 2.38.0])
 PKG_CHECK_MODULES([GTK3], [gtk+-3.0 >= 3.10.0])
 # We require GStreamer 1.0
 PKG_CHECK_MODULES([GSTREAMER], [gstreamer-1.0 >= 1.0.10])
+
 # Use id3tag to check audio tags.
-AC_CHECK_HEADERS([id3.h], [])
+AC_CHECK_HEADERS([id3.h], [music_player_found_id3_headers=yes; break;])
+AS_IF([test "x$music_player_found_id3_headers" != "xyes"],
+	[AC_MSG_ERROR([Unable to find the id3 headers])])
 
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_FILES(Makefile src/Makefile)
