Switch to c99 to kill the unicode character warning

--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,7 @@
 AC_INIT([Music Player], 1, [ikey.doherty@gmail.com])
 AM_INIT_AUTOMAKE([foreign -Wno-portability no-dist-gzip dist-xz])
 AC_PROG_CC
+AC_PROG_CC_STDC
 LT_PREREQ(2.2)
 AC_CONFIG_HEADERS([config.h])
 AC_PREFIX_DEFAULT(/usr/local)
