--- a/configure.ac
+++ b/configure.ac
@@ -19,6 +19,8 @@ AC_CHECK_HEADERS([id3.h], [music_player_found_id3_headers=yes; break;])
 AS_IF([test "x$music_player_found_id3_headers" != "xyes"],
 	[AC_MSG_ERROR([Unable to find the id3 headers])])
 
+AC_CHECK_HEADERS([gdbm.h], [], [AC_MSG_ERROR([Unable to find gdbm headers])])
+
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_FILES(Makefile src/Makefile)
 AC_OUTPUT
