--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -31,11 +31,13 @@ music_player_SOURCES = \
 music_player_CFLAGS = \
 	$(GTK3_CFLAGS) \
 	$(GSTREAMER_CFLAGS) \
+	$(GSTREAMER_VIDEO_CFLAGS) \
 	$(ID3_FLAGS) \
 	$(AM_CFLAGS)
 
 music_player_LDADD = \
 	$(GTK3_LIBS) \
 	$(GSTREAMER_LIBS) \
+	$(GSTREAMER_VIDEO_LIBS) \
 	-lid3 \
 	libmediadb.la
