Add skeleton of BudgieControlBar
We need a secondary toolbar to provide the functionality of the CSD
buttons in full screen mode, so we'll simply subclass GtkToolbar and
move all of our existing toolbar usage over to this.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,6 +20,8 @@ libbudgiedb_la_LIBADD = \
 budgie_SOURCES = \
 	budgie-window.c \
 	budgie-window.h \
+	budgie-control-bar.c \
+	budgie-control-bar.h \
 	player-status-area.c \
 	player-status-area.h \
 	player-view.c \
