Add BudgieSettingsView skeleton
We'll use a nice settings view within our GtkStack instead of additional
windows.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -22,6 +22,8 @@ budgie_SOURCES = \
 	budgie-window.h \
 	budgie-control-bar.c \
 	budgie-control-bar.h \
+	budgie-settings-view.c \
+	budgie-settings-view.h \
 	player-status-area.c \
 	player-status-area.h \
 	player-view.c \
