--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,8 @@
 ACLOCAL_AMFLAGS = -I m4
 AM_CFLAGS = -DDATADIR=\"$(pkgdatadir)\"
 
-EXTRA_DIST = ${top_srcdir}/README.mkd
+EXTRA_DIST = ${top_srcdir}/README.mkd \
+	     ${top_srcdir}/common.mk
 
 NULL =
 CLEANFILES =
