--- a/data/budgie.desktop
+++ b/data/budgie.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
-Name=Budgie
+Name=Budgie Media Player
 GenericName=Media Player
 Comment=Modern and elegant media player
 Icon=budgie
-Exec=budgie
+Exec=budgie-media-player
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;AudioVideo;Player;
