Rename to EvolveOS's gsetting schema

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -18,13 +18,13 @@ desktop_DATA = \
 # GLib Schema
 glibdir=$(datadir)/glib-2.0/schemas
 glib_DATA = \
-	io.github.ikeydoherty.Budgie.gschema.xml
+	com.evolve-os.budgie.media-player.gschema.xml
 
 EXTRA_DIST = \
 	album-base.png \
 	album-overlay.png \
 	budgie-media-player.desktop \
-	io.github.ikeydoherty.Budgie.gschema.xml \
+	com.evolve-os.budgie.media-player.gschema.xml \
 	budgie.svg \
 	budgie-128x128.png \
 	budgie-16x16.png \
