--- a/src/meson.build
+++ b/src/meson.build
@@ -1,12 +1,12 @@
 bmp_common_sources = [
-    'budgie-control-bar.c'
-    'budgie-media-label.c'
-    'budgie-settings-view.c'
-    'budgie-status-area.c'
-    'budgie-window.c'
-    'main.c'
-    'util.c'
-    'db/budgie-db.c'
+    'budgie-control-bar.c',
+    'budgie-media-label.c',
+    'budgie-settings-view.c',
+    'budgie-status-area.c',
+    'budgie-window.c',
+    'main.c',
+    'util.c',
+    'db/budgie-db.c',
 ]
 
 bmp_name = 'budgie-media-player'
@@ -14,9 +14,4 @@ bmp_name = 'budgie-media-player'
 bmp = executable(
     bmp_name,
     sources: bmp_common_sources
-    dependencies: [
-        dep_gtk3,
-        dep_sqlite3,
-    ],
-    install: true,
 )
